# epublib

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: check.yml
src/epublib/: __init__.py  __main__.py  cli.py
tests/: test_read.py
